Model Check Point Implemented

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8Lj6qIDQkrK4volWHvoW1",
+      "authorship_tag": "ABX9TyO3lZ68/iw3bAt6GzrEFikv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {
         "id": "xqaLhvrsXytC"
       },
@@ -154,9 +154,12 @@
         "    if validation_data != None and validation_labels != None:\n",
         "      validation_data_combined = list(zip(validation_data, validation_labels))\n",
         "    early_stopping = None\n",
+        "    model_check_point = None\n",
         "    for cb in callbacks:\n",
         "      if isinstance(cb, EarlyStopping):\n",
         "        early_stopping = cb\n",
+        "      if isinstance(cb, ModelCheckPoint):\n",
+        "        model_check_point = cb\n",
         "    for iteration in range(epochs):\n",
         "      start_time = time.time()\n",
         "      self.update_weights_and_biases(training_data_combined, batch_size, learning_rate)\n",
@@ -174,6 +177,11 @@
         "        early_stopping.on_epoch_end(iteration, logs)\n",
         "        if early_stopping.stop_training:\n",
         "            break\n",
+        "      if model_check_point:\n",
+        "        model_check_point.on_epoch_end(iteration, logs)\n",
+        "        if model_check_point.show_check_point:\n",
+        "          best_epoch_details = model_check_point.get_best_epoch_details()\n",
+        "          print(f\"accuracy: {best_epoch_details['accuracy']:.4f} - loss: {best_epoch_details['loss']:.4f} - val_accuracy: {best_epoch_details['val_accuracy']:.4f} - val_loss: {best_epoch_details['val_loss']:.4f}\")\n",
         "\n",
         "\n",
         "  def evaluate(self, data):\n",
@@ -217,7 +225,26 @@
         "      self.current_count += 1\n",
         "      if self.current_count > self.patience:\n",
         "        self.stop_training = True\n",
-        "\n"
+        "\n",
+        "\n",
+        "class ModelCheckPoint:\n",
+        "  def __init__(self, monitor='val_loss'):\n",
+        "    self.monitor = monitor\n",
+        "    self.show_check_point = False\n",
+        "    self.previous_best = None\n",
+        "    self.improved_epoch_details = []\n",
+        "  def on_epoch_end(self, epoch, epoch_info):\n",
+        "    current = epoch_info.get(self.monitor)\n",
+        "    if self.previous_best == None or current < self.previous_best:\n",
+        "      self.previous_best = current\n",
+        "      self.store_epoch_details(epoch_info)\n",
+        "      self.show_check_point = True\n",
+        "    else:\n",
+        "      self.show_check_point = False\n",
+        "  def store_epoch_details(self, epoch_info):\n",
+        "    self.improved_epoch_details.append(epoch_info)\n",
+        "  def get_best_epoch_details(self):\n",
+        "    return self.improved_epoch_details[-1]\n"
       ]
     },
     {
@@ -239,21 +266,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bceijdXIYJ_i",
-        "outputId": "40632975-9df6-4f36-87c8-9b46609b5563"
+        "outputId": "b51d0050-7c47-4b34-cb4d-89bb4f0d97d1"
       },
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-04-07 15:48:30--  https://github.com/mnielsen/neural-networks-and-deep-learning/raw/master/data/mnist.pkl.gz\n",
-            "Resolving github.com (github.com)... 140.82.113.4\n",
-            "Connecting to github.com (github.com)|140.82.113.4|:443... connected.\n",
+            "--2025-04-07 16:36:49--  https://github.com/mnielsen/neural-networks-and-deep-learning/raw/master/data/mnist.pkl.gz\n",
+            "Resolving github.com (github.com)... 140.82.112.4\n",
+            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/mnielsen/neural-networks-and-deep-learning/master/data/mnist.pkl.gz [following]\n",
-            "--2025-04-07 15:48:30--  https://raw.githubusercontent.com/mnielsen/neural-networks-and-deep-learning/master/data/mnist.pkl.gz\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.111.133, ...\n",
+            "--2025-04-07 16:36:49--  https://raw.githubusercontent.com/mnielsen/neural-networks-and-deep-learning/master/data/mnist.pkl.gz\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 17051982 (16M) [application/octet-stream]\n",
@@ -261,7 +288,7 @@
             "\n",
             "mnist.pkl.gz        100%[===================>]  16.26M  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2025-04-07 15:48:30 (138 MB/s) - ‘mnist.pkl.gz’ saved [17051982/17051982]\n",
+            "2025-04-07 16:36:49 (124 MB/s) - ‘mnist.pkl.gz’ saved [17051982/17051982]\n",
             "\n"
           ]
         }
@@ -307,9 +334,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1qDiZDPkY9z8",
-        "outputId": "f8d242a9-7c73-4f67-a238-17c4132b039d"
+        "outputId": "6995f2c5-f4e0-4fa3-a0b0-be38f9d6c392"
       },
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,48 +356,59 @@
       "metadata": {
         "id": "5tmOoXc8IeNX"
       },
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "early_stopping = EarlyStopping(monitor='val_loss', patience=3)\n",
-        "model.fit(X_train, y_train, X_val, y_val, callbacks=[early_stopping])\n"
+        "model_check_point = ModelCheckPoint(monitor='val_loss')\n",
+        "model.fit(X_train, y_train, X_val, y_val, callbacks=[early_stopping,model_check_point])\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gQGxRFfFIkHu",
-        "outputId": "1130b2f2-a0fa-447b-bdb5-27ad31eace58"
+        "outputId": "0f3a93ff-b2e4-4c89-fe8c-04b6969aeec5"
       },
-      "execution_count": 8,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9055 - loss: 0.1546 - val_accuracy: 0.9136 - val_loss: 0.1445\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9252 - loss: 0.1226 - val_accuracy: 0.9315 - val_loss: 0.1167\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9322 - loss: 0.1141 - val_accuracy: 0.9338 - val_loss: 0.1097\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9417 - loss: 0.0980 - val_accuracy: 0.9385 - val_loss: 0.1010\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9387 - loss: 0.1031 - val_accuracy: 0.9365 - val_loss: 0.1061\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9447 - loss: 0.0928 - val_accuracy: 0.9406 - val_loss: 0.1012\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9498 - loss: 0.0851 - val_accuracy: 0.9437 - val_loss: 0.0944\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9528 - loss: 0.0791 - val_accuracy: 0.9466 - val_loss: 0.0883\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9533 - loss: 0.0791 - val_accuracy: 0.9476 - val_loss: 0.0908\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9549 - loss: 0.0765 - val_accuracy: 0.9465 - val_loss: 0.0900\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9575 - loss: 0.0721 - val_accuracy: 0.9463 - val_loss: 0.0885\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9581 - loss: 0.0711 - val_accuracy: 0.9477 - val_loss: 0.0880\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9571 - loss: 0.0730 - val_accuracy: 0.9463 - val_loss: 0.0901\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9601 - loss: 0.0677 - val_accuracy: 0.9467 - val_loss: 0.0874\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9616 - loss: 0.0650 - val_accuracy: 0.9487 - val_loss: 0.0858\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9608 - loss: 0.0678 - val_accuracy: 0.9472 - val_loss: 0.0896\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9620 - loss: 0.0644 - val_accuracy: 0.9498 - val_loss: 0.0847\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9598 - loss: 0.0690 - val_accuracy: 0.9471 - val_loss: 0.0893\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9656 - loss: 0.0582 - val_accuracy: 0.9517 - val_loss: 0.0823\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9611 - loss: 0.0675 - val_accuracy: 0.9460 - val_loss: 0.0906\n"
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9136 - loss: 0.1463 - val_accuracy: 0.9165 - val_loss: 0.1396\n",
+            "accuracy: 0.9136 - loss: 0.1463 - val_accuracy: 0.9165 - val_loss: 0.1396\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9287 - loss: 0.1193 - val_accuracy: 0.9283 - val_loss: 0.1193\n",
+            "accuracy: 0.9287 - loss: 0.1193 - val_accuracy: 0.9283 - val_loss: 0.1193\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9355 - loss: 0.1089 - val_accuracy: 0.9328 - val_loss: 0.1107\n",
+            "accuracy: 0.9355 - loss: 0.1089 - val_accuracy: 0.9328 - val_loss: 0.1107\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9447 - loss: 0.0937 - val_accuracy: 0.9403 - val_loss: 0.0997\n",
+            "accuracy: 0.9447 - loss: 0.0937 - val_accuracy: 0.9403 - val_loss: 0.0997\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9449 - loss: 0.0949 - val_accuracy: 0.9381 - val_loss: 0.1032\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9510 - loss: 0.0821 - val_accuracy: 0.9449 - val_loss: 0.0923\n",
+            "accuracy: 0.9510 - loss: 0.0821 - val_accuracy: 0.9449 - val_loss: 0.0923\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9535 - loss: 0.0777 - val_accuracy: 0.9464 - val_loss: 0.0887\n",
+            "accuracy: 0.9535 - loss: 0.0777 - val_accuracy: 0.9464 - val_loss: 0.0887\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9542 - loss: 0.0796 - val_accuracy: 0.9462 - val_loss: 0.0926\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9532 - loss: 0.0788 - val_accuracy: 0.9473 - val_loss: 0.0899\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9605 - loss: 0.0679 - val_accuracy: 0.9508 - val_loss: 0.0837\n",
+            "accuracy: 0.9605 - loss: 0.0679 - val_accuracy: 0.9508 - val_loss: 0.0837\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9578 - loss: 0.0719 - val_accuracy: 0.9474 - val_loss: 0.0888\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9623 - loss: 0.0664 - val_accuracy: 0.9522 - val_loss: 0.0829\n",
+            "accuracy: 0.9623 - loss: 0.0664 - val_accuracy: 0.9522 - val_loss: 0.0829\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9630 - loss: 0.0636 - val_accuracy: 0.9516 - val_loss: 0.0839\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9643 - loss: 0.0617 - val_accuracy: 0.9519 - val_loss: 0.0831\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9655 - loss: 0.0594 - val_accuracy: 0.9518 - val_loss: 0.0820\n",
+            "accuracy: 0.9655 - loss: 0.0594 - val_accuracy: 0.9518 - val_loss: 0.0820\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9673 - loss: 0.0572 - val_accuracy: 0.9536 - val_loss: 0.0803\n",
+            "accuracy: 0.9673 - loss: 0.0572 - val_accuracy: 0.9536 - val_loss: 0.0803\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9663 - loss: 0.0574 - val_accuracy: 0.9517 - val_loss: 0.0820\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9682 - loss: 0.0547 - val_accuracy: 0.9530 - val_loss: 0.0813\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9668 - loss: 0.0590 - val_accuracy: 0.9517 - val_loss: 0.0853\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9705 - loss: 0.0531 - val_accuracy: 0.9537 - val_loss: 0.0819\n"
           ]
         }
       ]
