Basic Recurrent Neural Network Implemented

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2dKQ7n215xyYNd17NwTje",
+      "authorship_tag": "ABX9TyPArCGk6tAgCf6KzjK1btpm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,12 +36,12 @@
       "metadata": {
         "id": "po-GlxcIpAYb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "xqaLhvrsXytC"
       },
@@ -303,7 +303,7 @@
       "metadata": {
         "id": "4pw7FOzTq5FE"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -316,7 +316,7 @@
       "metadata": {
         "id": "x-6nGbQZAJ6r"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -331,7 +331,7 @@
         "id": "bceijdXIYJ_i",
         "outputId": "7256bfdc-f6e3-49c2-b09e-bcd7bf79f1c9"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +399,7 @@
         "id": "1qDiZDPkY9z8",
         "outputId": "6edf1595-255d-42e2-93db-a764819e3043"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,7 +432,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +461,7 @@
         "id": "gQGxRFfFIkHu",
         "outputId": "d9acbaa3-6f29-4386-e166-064275614643"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +518,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -620,6 +620,80 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#we have 2 weighting vectors and 1 biasing vector. Assume input layer has 30 neurons recurrent unit has 10 neurons and output has 4 neurons\n",
+        "Wxh = np.random.randn(10,30)\n",
+        "Whh = np.random.randn(10,10)\n",
+        "Wyh = np.random.randn(4,10)\n",
+        "bh = np.random.randn(10,1)\n",
+        "outputs = []\n",
+        "\n",
+        "def tanh(x):\n",
+        "    return np.tanh(x)\n",
+        "\n",
+        "def tanh_derivative(h):\n",
+        "    return 1 - h ** 2\n",
+        "\n",
+        "def forward_prop_rnn(sequence):\n",
+        "  h = np.zeros((10, 1))\n",
+        "  hs = [h]\n",
+        "  for x_t in sequence:\n",
+        "      x_t = x_t.reshape(30, 1)\n",
+        "      a = np.dot(Wxh, x_t) + np.dot(Whh, h) + bh\n",
+        "      h = tanh(a)\n",
+        "      y = np.dot(Wyh, h) + by\n",
+        "      hs.append(h)\n",
+        "      ys.append(y)\n",
+        "  return ys, hs[1:]\n",
+        "\n",
+        "def backward_prop_rnn(sequence, targets, hs, ys):\n",
+        "    dWxh = np.zeros_like(Wxh)\n",
+        "    dWhh = np.zeros_like(Whh)\n",
+        "    dWyh = np.zeros_like(Wyh)\n",
+        "    dbh = np.zeros_like(bh)\n",
+        "    dby = np.zeros_like(by)\n",
+        "\n",
+        "    h0 = np.zeros_like(hs[0])\n",
+        "    hs_full = [h0] + hs\n",
+        "\n",
+        "    dh_next = np.zeros_like(hs[0])\n",
+        "\n",
+        "    for t in reversed(range(len(sequence))):\n",
+        "        x_t = sequence[t].reshape(30, 1)\n",
+        "        y_t = targets[t].reshape(4, 1)\n",
+        "        h_t = hs_full[t + 1]\n",
+        "        h_prev = hs_full[t]\n",
+        "        y_pred = ys[t]\n",
+        "\n",
+        "        dy = y_pred - y_t\n",
+        "        dWyh += np.dot(dy, h_t.T)\n",
+        "        dby += dy\n",
+        "\n",
+        "        dh = np.dot(Wyh.T, dy) + dh_next\n",
+        "        da = dh * tanh_derivative(h_t)\n",
+        "\n",
+        "        dWxh += np.dot(da, x_t.T)\n",
+        "        dWhh += np.dot(da, h_prev.T)\n",
+        "        dbh += da\n",
+        "\n",
+        "        dh_next = np.dot(Whh.T, da)\n",
+        "\n",
+        "    return {\n",
+        "        'dWxh': dWxh,\n",
+        "        'dWhh': dWhh,\n",
+        "        'dWyh': dWyh,\n",
+        "        'dbh': dbh,\n",
+        "        'dby': dby\n",
+        "    }\n"
+      ],
+      "metadata": {
+        "id": "hpVhN-9MpdB5"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
