Basic Tokenizer Implemented

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPArCGk6tAgCf6KzjK1btpm",
+      "authorship_tag": "ABX9TyPSmyhIII0FVkOYRIilh+5h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -315,6 +315,50 @@
       ],
       "metadata": {
         "id": "x-6nGbQZAJ6r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Tokenizer:\n",
+        "  def __init__(self, num_words = 100, lower=True):\n",
+        "    self.num_words = num_words\n",
+        "    self.lower = lower\n",
+        "    self.word_count = defaultdict(int)\n",
+        "    self.word_index = {}\n",
+        "  def fit_on_texts(self, inputs):\n",
+        "    for input in inputs:\n",
+        "      if self.lower:\n",
+        "        input = [x.lower() for x in input]\n",
+        "      for word in input:\n",
+        "        self.word_count[word] += 1\n",
+        "      sorted_words = sorted(self.word_counts.items(), key=lambda x: -x[1])\n",
+        "      for i,word in enumerate(sorted_words[:self.num_words]):\n",
+        "        self.word_index[word[0]] = i+1\n",
+        "  def texts_to_sequences(self, input):\n",
+        "    sequence = []\n",
+        "    for word in input:\n",
+        "      sequence.append(self.word_index.get(word,0))\n",
+        "    return sequence\n",
+        "  def pad_sequences(self, seq, truncating='post', padding='post', maxlen=100):\n",
+        "    if len(seq) > maxlen:\n",
+        "        if truncating == 'post':\n",
+        "            seq = seq[:maxlen]\n",
+        "        else:\n",
+        "            seq = seq[-maxlen:]\n",
+        "    elif len(seq) < maxlen:\n",
+        "        pad_length = maxlen - len(seq)\n",
+        "        if padding == 'post':\n",
+        "            seq = seq + [0] * pad_length\n",
+        "        else:\n",
+        "            seq = [0] * pad_length + seq\n",
+        "    return seq\n",
+        ""
+      ],
+      "metadata": {
+        "id": "aRozc8TOW2nf"
       },
       "execution_count": null,
       "outputs": []
