Recurrent Neural Network Layer Implemented

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJ8y5yvY3CodT0LSVwR5QI",
+      "authorship_tag": "ABX9TyOXkLYPVC1H9aj/oGQYfTpG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "metadata": {
         "id": "po-GlxcIpAYb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,6 +322,134 @@
     {
       "cell_type": "code",
       "source": [
+        "class RNN:\n",
+        "  def __init__(self, input_size, hidden_size, output_size, activation = 'tanh'):\n",
+        "    self.input_size = input_size\n",
+        "    self.hidden_size = hidden_size\n",
+        "    self.output_size = output_size\n",
+        "    self.activation = activation\n",
+        "    self.Wxh = np.random.randn(self.hidden_size, self.input_size)\n",
+        "    self.Whh = np.random.randn(self.hidden_size, self.hidden_size)\n",
+        "    self.Wyh = np.random.randn(self.output_size, self.hidden_size)\n",
+        "    self.bh = np.random.randn(self.hidden_size, 1)\n",
+        "    self.by = np.random.randn(self.output_size, 1)\n",
+        "\n",
+        "  def tanh(x):\n",
+        "    return np.tanh(x)\n",
+        "\n",
+        "  def tanh_derivative(h):\n",
+        "    return 1 - h ** 2\n",
+        "\n",
+        "  def update_weights_and_biases(self, input_data, batch_size=10, learning_rate=3.0):\n",
+        "    random.shuffle(input_data)\n",
+        "    mini_batches = [input_data[k:k+batch_size] for k in range(0, len(input_data), batch_size)]\n",
+        "\n",
+        "    for batch in mini_batches:\n",
+        "        self.update_mini_batch(batch, learning_rate)\n",
+        "\n",
+        "  def update_mini_batch(self, mini_batch, learning_rate=3.0):\n",
+        "    dWxh_total = np.zeros_like(self.Wxh)\n",
+        "    dWhh_total = np.zeros_like(self.Whh)\n",
+        "    dWyh_total = np.zeros_like(self.Wyh)\n",
+        "    dbh_total = np.zeros_like(self.bh)\n",
+        "    dby_total = np.zeros_like(self.by)\n",
+        "\n",
+        "    for data_item in mini_batch:\n",
+        "        x, y = data_item\n",
+        "        ys, hs = self.forward_prop(x)\n",
+        "        grads = self.backward_prop(x, y, hs, ys)\n",
+        "        dWxh_total += grads['dWxh']\n",
+        "        dWhh_total += grads['dWhh']\n",
+        "        dWyh_total += grads['dWyh']\n",
+        "        dbh_total += grads['dbh']\n",
+        "        dby_total += grads['dby']\n",
+        "\n",
+        "    self.Wxh -= learning_rate * dWxh_total / len(mini_batch)\n",
+        "    self.Whh -= learning_rate * dWhh_total / len(mini_batch)\n",
+        "    self.Wyh -= learning_rate * dWyh_total / len(mini_batch)\n",
+        "    self.bh -= learning_rate * dbh_total / len(mini_batch)\n",
+        "    self.by -= learning_rate * dby_total / len(mini_batch)\n",
+        "\n",
+        "\n",
+        "  def fit(self, sequences, targets, epochs=20, batch_size=10, learning_rate=3.0):\n",
+        "    for epoch in range(epochs):\n",
+        "      self.update_weights_and_biases(list(zip(sequences, targets)), batch_size, learning_rate)\n",
+        "      print(f\"Epoch {epoch + 1}/{epochs} completed.\")\n",
+        "\n",
+        "\n",
+        "  def forward_prop(self, sequence):\n",
+        "    h = np.zeros((self.hidden_size, 1))\n",
+        "    hs = [h]\n",
+        "    ys = []\n",
+        "\n",
+        "    for x_t in sequence:\n",
+        "        x_t = x_t.reshape(self.input_size, 1)\n",
+        "        a = np.dot(self.Wxh, x_t) + np.dot(self.Whh, h) + self.bh\n",
+        "        h = self.tanh(a)\n",
+        "        y = np.dot(self.Wyh, h) + self.by\n",
+        "        hs.append(h)\n",
+        "        ys.append(y)\n",
+        "    return ys, hs[1:]\n",
+        "\n",
+        "  def backward_prop(self, sequence, targets, hs, ys):\n",
+        "    dWxh = np.zeros_like(self.Wxh)\n",
+        "    dWhh = np.zeros_like(self.Whh)\n",
+        "    dWyh = np.zeros_like(self.Wyh)\n",
+        "    dbh = np.zeros_like(self.bh)\n",
+        "    dby = np.zeros_like(self.by)\n",
+        "\n",
+        "    h0 = np.zeros_like(hs[0])\n",
+        "    hs_full = [h0] + hs\n",
+        "    dh_next = np.zeros_like(hs[0])\n",
+        "\n",
+        "    for t in reversed(range(len(sequence))):\n",
+        "        x_t = sequence[t].reshape(self.input_size, 1)\n",
+        "        y_t = targets[t].reshape(self.output_size, 1)\n",
+        "        h_t = hs_full[t + 1]\n",
+        "        h_prev = hs_full[t]\n",
+        "        y_pred = ys[t]\n",
+        "\n",
+        "        dy = y_pred - y_t\n",
+        "        dWyh += np.dot(dy, h_t.T)\n",
+        "        dby += dy\n",
+        "\n",
+        "        dh = np.dot(self.Wyh.T, dy) + dh_next\n",
+        "        da = dh * self.tanh_derivative(h_t)\n",
+        "\n",
+        "        dWxh += np.dot(da, x_t.T)\n",
+        "        dWhh += np.dot(da, h_prev.T)\n",
+        "        dbh += da\n",
+        "\n",
+        "        dh_next = np.dot(self.Whh.T, da)\n",
+        "\n",
+        "    return {\n",
+        "        'dWxh': dWxh,\n",
+        "        'dWhh': dWhh,\n",
+        "        'dWyh': dWyh,\n",
+        "        'dbh': dbh,\n",
+        "        'dby': dby\n",
+        "    }\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "9Ec-oTPPd381"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aCHgkNwFlp0N"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from collections import defaultdict\n",
         "class Tokenizer:\n",
         "  def __init__(self, num_words = 100, lower=True):\n",
@@ -363,7 +491,7 @@
       "metadata": {
         "id": "aRozc8TOW2nf"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -389,7 +517,7 @@
         "collapsed": true,
         "id": "lKo0o-xxijh8"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -411,7 +539,7 @@
         "id": "tCQtIyKdi2h9",
         "outputId": "f9e4f756-a8f4-48f6-f94a-13831040ad25"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,7 +566,7 @@
         "id": "O8rsHjAHli84",
         "outputId": "3b0c1412-3981-4a9e-b977-a675f4e937ad"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -753,76 +881,11 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#we have 2 weighting vectors and 1 biasing vector. Assume input layer has 30 neurons recurrent unit has 10 neurons and output has 4 neurons\n",
-        "Wxh = np.random.randn(10,30)\n",
-        "Whh = np.random.randn(10,10)\n",
-        "Wyh = np.random.randn(4,10)\n",
-        "bh = np.random.randn(10,1)\n",
-        "outputs = []\n",
-        "\n",
-        "def tanh(x):\n",
-        "    return np.tanh(x)\n",
-        "\n",
-        "def tanh_derivative(h):\n",
-        "    return 1 - h ** 2\n",
-        "\n",
-        "def forward_prop_rnn(sequence):\n",
-        "  h = np.zeros((10, 1))\n",
-        "  hs = [h]\n",
-        "  for x_t in sequence:\n",
-        "      x_t = x_t.reshape(30, 1)\n",
-        "      a = np.dot(Wxh, x_t) + np.dot(Whh, h) + bh\n",
-        "      h = tanh(a)\n",
-        "      y = np.dot(Wyh, h) + by\n",
-        "      hs.append(h)\n",
-        "      ys.append(y)\n",
-        "  return ys, hs[1:]\n",
-        "\n",
-        "def backward_prop_rnn(sequence, targets, hs, ys):\n",
-        "    dWxh = np.zeros_like(Wxh)\n",
-        "    dWhh = np.zeros_like(Whh)\n",
-        "    dWyh = np.zeros_like(Wyh)\n",
-        "    dbh = np.zeros_like(bh)\n",
-        "    dby = np.zeros_like(by)\n",
-        "\n",
-        "    h0 = np.zeros_like(hs[0])\n",
-        "    hs_full = [h0] + hs\n",
-        "\n",
-        "    dh_next = np.zeros_like(hs[0])\n",
-        "\n",
-        "    for t in reversed(range(len(sequence))):\n",
-        "        x_t = sequence[t].reshape(30, 1)\n",
-        "        y_t = targets[t].reshape(4, 1)\n",
-        "        h_t = hs_full[t + 1]\n",
-        "        h_prev = hs_full[t]\n",
-        "        y_pred = ys[t]\n",
-        "\n",
-        "        dy = y_pred - y_t\n",
-        "        dWyh += np.dot(dy, h_t.T)\n",
-        "        dby += dy\n",
-        "\n",
-        "        dh = np.dot(Wyh.T, dy) + dh_next\n",
-        "        da = dh * tanh_derivative(h_t)\n",
-        "\n",
-        "        dWxh += np.dot(da, x_t.T)\n",
-        "        dWhh += np.dot(da, h_prev.T)\n",
-        "        dbh += da\n",
-        "\n",
-        "        dh_next = np.dot(Whh.T, da)\n",
-        "\n",
-        "    return {\n",
-        "        'dWxh': dWxh,\n",
-        "        'dWhh': dWhh,\n",
-        "        'dWyh': dWyh,\n",
-        "        'dbh': dbh,\n",
-        "        'dby': dby\n",
-        "    }\n"
-      ],
+      "source": [],
       "metadata": {
         "id": "hpVhN-9MpdB5"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     }
   ]
